--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title></title>
 	</head>
-	<body>
-		<h1>It works!</h1>
+	<body bgcolor="E6E6FA">
+		<h1>It works! 1234567890</h1>
 	</body>
 </html>
